@@ -43,6 +43,7 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 @Slf4j
@@ -225,10 +226,9 @@ public class MessageListener {
      * @param originalMessageId the id of the original message
      */
     private void sendCloudEvent(MicoCloudEventImpl<JsonNode> cloudEvent, String originalMessageId) throws MicoCloudEventException, BatchMicoCloudEventException {
-        List<List<String>> routingSlip = cloudEvent.getRoutingSlip().orElse(new ArrayList<>());
-        if (routingSlip.size() > 0) {
-            List<String> destinations = routingSlip.get(routingSlip.size() - 1);
-            routingSlip.remove(routingSlip.size() - 1);
+        LinkedList<List<String>> routingSlip = cloudEvent.getRoutingSlip().orElse(new LinkedList<>());
+        if (!routingSlip.isEmpty()) {
+            List<String> destinations = routingSlip.removeLast();
             ArrayList<MicoCloudEventException> exceptions = new ArrayList<>(destinations.size());
             for (String topic : destinations) {
                 try {
